# pascalito_EIA

./: README.md
motor_control_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
motor_control_pkg/install/motor_control_pkg/lib/motor_control_pkg/: master_control  motor_odom_node
motor_control_pkg/install/motor_control_pkg/share/motor_control_pkg/: package.sh
motor_control_pkg/install/motor_control_pkg/share/motor_control_pkg/launch/: pascalito_bringup.py
motor_control_pkg/motor_control_pkg/: master_control.py
pascalito/: CMakeLists.txt  package.xml
pascalito/config/: config_robot.rviz  nav2_pascal_config.yaml  slam_toolbox_params.yaml
pascalito/launch/: pascalito_mapeo.py  pascalito_navegante.py  pascalito_transformer.py  slam_toolbox_pascalito.py  view_pascalito.py
pascalito/src/: cinematicaDirecta_node.py  cinematicaInversa_node.py  navigate_goals.py.py  odometry_pascal.py  pascalito_odom.cpp
pascalito/urdf/: pascalito.urdf.xacro
pascalito_sim/: package.xml  setup.cfg  setup.py
pascalito_sim/launch/: robot_launch.py
pascalito_sim/pascalito_sim/: ekf_node.py  odometry_publisher.py  webots_robot_driver.py
pascalito_sim/resource/: ekf_params.yaml  robot.urdf  rviz_config.rviz  slam_toolbox_params.yaml
pascalito_sim/worlds/: pascal_mecanum.wbt
